--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -583,7 +583,7 @@
     "features = pd.get_dummies(features_raw)\n",
     "\n",
     "# TODO: Encode the 'income_raw' data to numerical values\n",
-    "income_raw = income_raw.apply(lambda x: 1 if x == '>50K' else 0)\n",
+    "income = income_raw.apply(lambda x: 1 if x == '>50K' else 0)\n",
     "\n",
     "# Print the number of features after one-hot encoding\n",
     "encoded = list(features.columns)\n",
@@ -1010,7 +1010,7 @@
     "# Make predictions using the unoptimized and model\n",
     "predictions = (clf.fit(X_train, y_train)).predict(X_test)\n",
     "best_predictions = best_clf.predict(X_test)\n",
-    "\n",
+    "print best_clf\n",
     "# Report the before-and-afterscores\n",
     "print \"Unoptimized model\\n------\"\n",
     "print \"Accuracy score on testing data: {:.4f}\".format(accuracy_score(y_test, predictions))\n",
@@ -1187,7 +1187,7 @@
     "# TODO: Import a supervised learning model that has 'feature_importances_'\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "# TODO: Train the supervised model on the training set \n",
-    "model =  ExtraTreesClassifier().fit(X_train,y_train)\n",
+    "model =  ExtraTreesClassifier(random_state=0).fit(X_train,y_train)\n",
     "\n",
     "# TODO: Extract the feature importances\n",
     "importances = model.feature_importances_\n",
